# QFileTagger

./: CMakeLists.txt
assets/ui/: mainwindow.ui
src/: main.cpp  mainwindow.cpp  mainwindow.h
